samples/_failures_safe/1761421391_0e6dd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_000d2771.c: In function ‘main’:
./samples/SAFE/__tmp_000d2771.c:160:5: error: expected expression at end of input
  160 |     input[strcspn(input,
      |     ^~~~~
./samples/SAFE/__tmp_000d2771.c:160:5: error: expected declaration or statement at end of input
